// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test NavBarButton Rendering NavBarButton should match to snapshot with Icon 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="navBarButton"
>
  <View
    style={
      Object {
        "marginLeft": 20,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontSize": 30,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Test NavBarButton Rendering NavBarButton should match to snapshot with Text 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="navBarButton"
>
  <Text
    style={
      Array [
        Object {
          "color": undefined,
        },
        Object {
          "marginRight": 20,
        },
        Object {
          "fontSize": 16,
        },
      ]
    }
  >
    Forgot Password
  </Text>
</View>
`;
